# ROSTutorial

./: README.md  exemplo1.cpp
devel/: .catkin  .rosinstall  setup.sh
devel/lib/cursoros-pkg/: hello  pubvel  subpose
devel/lib/pkgconfig/: cursoros-pkg.pc
devel/share/cursoros-pkg/cmake/: cursoros-pkgConfig.cmake
src/cursoros-pkg/: CMakeLists.txt  doublesim.launch  exemple.launch  hello.cpp  package.xml  pubvel.cpp  subpose.cpp
